[package]
name = "last_samourai"
version = "0.1.0"
edition = "2021"

[dependencies]
bracket-terminal = "0.8.7"
bracket-lib = { version = "0.8.7", features = ["serde" ] }
specs = { version = "0.18.0", features = ["serde"] }
rand = "0.8.5"
specs-derive = "0.4.1"  
serde = { version="1.0.152", features = ["derive"] }
serde_json = "1.0.91"
lazy_static = "1.4.0"
regex="*"
rand_xorshift="0.3"
getrandom="0.2"